--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,41 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+    font-family: 'Kumbh Sans', sans-serif;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.hover-effect{
+    transition: all 0.5s ease;
 }
-a:hover {
-  color: #535bf2;
+.hover-effect::after{
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 5px;
+    background: hsl(26, 100%, 55%);
+    top: 65px;
+    right: 0;
+    z-index: 1;
+    transition: all 0.5s ease;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+/*.hover-effect::before{*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    width: 0;*/
+/*    height: 100%;*/
+/*    border-bottom: 4px solid hsl(26, 100%, 55%);*/
+/*    top: 0;*/
+/*    right: 0;*/
+/*    z-index: 1;*/
+/*    opacity: 0;*/
+/*    transition: all 0.5s ease;*/
+/*}*/
+.hover-effect:hover::after{
+    left: 0;
+    width: 100%;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.hover-effect:hover::after{
 }
